# btb-patcher

./: Gruntfile.cjs  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src/lib/: AppWindow.svelte
src/lib/Containers/: BottomRightPanel.svelte  LeftPanel.svelte
